fixed margin spacing with p

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ section{
 }
 
 p{
-    margin:15px;
+    margin:5%;
 }
 .white{
     color: white;
